@@ -4,7 +4,7 @@
  *  Diese Software unterliegt der Version 2 der GNU General Public License.
  *
  *  Devwex, Advanced Server Development
- *  Copyright (C) 2018 Seanox Software Solutions
+ *  Copyright (C) 2020 Seanox Software Solutions
  *
  *  This program is free software; you can redistribute it and/or modify it
  *  under the terms of version 2 of the GNU General Public License as published
@@ -34,12 +34,12 @@ import java.net.SocketException;
  *  Telnet basierenden Fern&uuml;berwachung vom Service (Container) f&uuml;r
  *  Statusabfragen, Restart und Stop, zur Verf&uuml;gung.<br>
  *  <br>
- *  Remote 5.1 20180218<br>
- *  Copyright (C) 2018 Seanox Software Solutions<br>
+ *  Remote 5.1.1 20200416<br>
+ *  Copyright (C) 2020 Seanox Software Solutions<br>
  *  Alle Rechte vorbehalten.
  *
  *  @author  Seanox Software Solutions
- *  @version 5.1 20180218
+ *  @version 5.1.1 20200416
  */
 public class Remote implements Runnable {
 
@@ -289,12 +289,6 @@ public class Remote implements Runnable {
                 //der Socket wird gegebenfalls geschlossen
                 try {this.accept.close();
                 } catch (Throwable exception) {
-
-                    //keine Fehlerbehandlung erforderlich
-                }
-
-                try {Thread.sleep(25);
-                } catch (Throwable throwable1) {
                     this.destroy();
                 }
             }
